# leakingcallback

./: Cargo.toml  README.md  build.rs
src/: foo.c  main.rs
